--- a/czat/Properties/Resources.resx
+++ b/czat/Properties/Resources.resx
@@ -172,4 +172,13 @@
   <data name="_9" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\picture\9.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="rewers" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\rewers.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="rycerz1" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\rycerz1.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="rycerz2" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\rycerz2.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
